slurm-204727.out
cp: cannot stat ‘checkpoint_CIFAR100_resnet50_100_100_0.0_RobustnessDandR_eps1=7.8,_eps2=2.9__7552_107374182397200_100.000000.weights’: No such file or directory
  File "main_gc.py", line 224
    print('{0}, '
        ^
IndentationError: expected an indented block
cp: cannot stat ‘checkpoint_CIFAR100_resnet50_100_100_0.0_RobustnessDandR_eps1=7.8,_eps2=2.9__7552_107374182397200_100.000000.weights’: No such file or directory
  File "main_gc.py", line 224
    print('{0}, '
        ^
IndentationError: expected an indented block
Traceback (most recent call last):
  File "remove_header.py", line 3, in <module>
    lines = open(sys.argv[1], 'r').readlines()
FileNotFoundError: [Errno 2] No such file or directory: '../CIFAR100_resnet50_128/log_CIFAR100_resnet50_350_100_0.01_RobustnessDandR_eps1=7.8,_eps2=2.9__FGSM.txt'
/cm/local/apps/slurm/var/spool/job204727/slurm_script: line 33: files/CIFAR100_resnet50_350_100_0.01_RobustnessDandR_eps1=7.8,_eps2=2.9__FGSM.txt: No such file or directory
Traceback (most recent call last):
  File "remove_header.py", line 3, in <module>
    lines = open(sys.argv[1], 'r').readlines()
FileNotFoundError: [Errno 2] No such file or directory: '../CIFAR100_resnet50_128/log_CIFAR100_resnet50_350_100_0.2_RobustnessDandR_eps1=7.8,_eps2=2.9__FGSM.txt'
